# ChangeLog for sys-process/cronbase
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/cronbase/ChangeLog,v 1.38 2011/11/20 09:41:05 xarthisius Exp $

  20 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> cronbase-0.3.3.ebuild:
  ppc64 stable wrt #294346

  20 Oct 2011; Brent Baude <ranger@gentoo.org> cronbase-0.3.3.ebuild:
  Marking cronbase-0.3.3 ppc for bug 294346

  20 Sep 2011; Jeroen Roovers <jer@gentoo.org> cronbase-0.3.3.ebuild:
  Stable for HPPA (bug #294346).

  03 Sep 2011; Raúl Porcel <armin76@gentoo.org> cronbase-0.3.3.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #294346

  24 Aug 2011; Thomas Kahle <tomka@gentoo.org> cronbase-0.3.3.ebuild:
  x86 stable per bug 294346

  24 Aug 2011; Tony Vroon <chainsaw@gentoo.org> cronbase-0.3.3.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo in bug
  #294346 filed by Jeremy "darkside" Olexa.

  17 Oct 2010; Mart Raudsepp <leio@gentoo.org> cronbase-0.3.2.ebuild,
  cronbase-0.3.2-r1.ebuild:
  Drop to ~mips

*cronbase-0.3.3 (13 Apr 2009)

  13 Apr 2009; Thilo Bangert <bangert@gentoo.org> +files/run-crons-0.3.3,
  +cronbase-0.3.3.ebuild:
  ignore emacs backup files (bug #237200) - include logging patch (bug
  #140869)

  12 Oct 2008; Thilo Bangert <bangert@gentoo.org> -files/run-crons-0.2.1,
  -files/run-crons-0.3, -files/run-crons-0.3.1, -cronbase-0.2.1-r3.ebuild,
  -cronbase-0.3.ebuild, -cronbase-0.3.1.ebuild:
  remove old versions

  28 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  cronbase-0.3.2-r1.ebuild:
  ppc stable, bug #182998

  28 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  cronbase-0.3.2-r1.ebuild:
  Marked stable on amd64 as per security bug 182998.

  27 Sep 2007; Brent Baude <ranger@gentoo.org> cronbase-0.3.2-r1.ebuild:
  Marking cronbase-0.3.2-r1 ppc64 for bug#182998

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> cronbase-0.3.2-r1.ebuild:
  alpha/ia64 stable wrt security #182998
