@@ -1,27 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX run-crons-0.3.2 2982 RMD160 356b881d39f2ee4be23b688487044eee31c605ec SHA1 0bad7320dc22b4032541e9304a186700fd6edf2b SHA256 a9e6f0a4a73c582ce9417c57ab14545feddd83ac911c5e51c30de7237568f1e7
 AUX run-crons-0.3.3 3254 RMD160 3870cf294ba3ed30b118ee4ec748b36709c2abad SHA1 15ada91dceb17fd0b0a65bcaea3819b64f62000a SHA256 77aa0820f5827b7fa2c35f877c2dc617c85c0ac80c35002624be091da520141a
 EBUILD cronbase-0.3.2-r1.ebuild 1435 RMD160 e88b0705fb5f425b3c14a7b0e26126742f55df47 SHA1 b46165a9e4566e712c306247bdb8d7473f7ddd70 SHA256 eadf789377ec7c68df55d9200bfdf2fa3994d57ba54ac5dbe66b8d9ecb5d4440
 EBUILD cronbase-0.3.2.ebuild 876 RMD160 68fdc10281b75f40ef147ebf0c6cac322f295890 SHA1 0b6dce321a9f67ffcfbe3e1ccead1a4f92089610 SHA256 e6903b52c1bfb1f96979f20b4c68b3ec3a84edbf96ea542ab1ab234edd01a2b5
-EBUILD cronbase-0.3.3.ebuild 1388 RMD160 2a9632a00144a001c8153e4a4abd1445c66976fe SHA1 3237ce95a8b5900f1af63b992c8bfa01248bcc9a SHA256 9d459782c554ce5cf533d6592204464626d9a8a3762986e55a53c08255d233a2
-MISC ChangeLog 8462 RMD160 cc50ea5ec6ee58c747e8828aae326d7bbec27cd3 SHA1 5ec6feed284052cf799de79269e9e347cfa022de SHA256 39f9b73854e7d3c3e49311f511584f551f7c7286f7f1e69a9610e28936bde8f6
+EBUILD cronbase-0.3.3.ebuild 1398 RMD160 781243715817b4b85e2b050e47cca7967f86f987 SHA1 7ad4ec08a0cd2965e63a5574efbfcfcb360b9c20 SHA256 135bd6e2d7b1d7142f328b232b98baef163be14be59218cfed1a6d43f7943e96
+MISC ChangeLog 8558 RMD160 e931995ba9ea07e8d07fe55fd7a3163aa4175c88 SHA1 13385ffce2d6ea925163ef112e8a6e4ed027ad16 SHA256 cb00f3ab7b66e5fc3d64b6cbd40d24936a0eb152f7392c531b0783c656ad5759
 MISC metadata.xml 158 RMD160 298878d8b5da225547b337739a1a48192546d7b8 SHA1 5a9f7a1c9f0f56d1b0e72ee9b67b5cc5771f6d7d SHA256 a262a73b2049a89ab6a4bdf51df27bea44c7f0aa0ee33176c59a9c63eb45e764
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOyMs3AAoJEF0huFKJUZL5vZ0P/3cY+eYLA6o+4aLFNkdNgK63
-tqmlDqLZcZby9wOvNoJYpY+Iz3Ctum6+07w+MkV8lfczyaZT1gXeGShtgOfd2ekX
-OXrUiFe8jZtSZInMKaZ+wPlB6q/E81jEdz8jv+nQEvEOKApoqyWsozv3eqmfWyQF
-X7jt4BQ2W5HaWoeDsYPe0VdiSrkhvyzCAb1HmuILoPnFpuaGngbWdMvOda9iU0eZ
-2kELoD16nkGBkl/zLmtCoRpCH/SrflMJ3Qf3UaLuO4ouALLuD39teDEoihXWlVd6
-Kx2jOtHy6w4b0/njsjNPwn2UptEMOaVxrzaGvzXrqv19o0qVLS4k1y9TKuw/ZXH5
-gDu25Hps9nklISygb+QGaCyRtM76jQGgOfQO9IsJUsz8UuzMp1tvIegF21qdBJRR
-EQYskPq5NuaZjiU7zsWgh0VSjvyc4L3E5+3RfBTqGWcndJMjmEZeNPbCtd+HkYfB
-ale5ucXSaKDfIo+0c2jb5bmGbrjLjx5bWI/L43rfIZ7ksCqtLixf5TMAVe6Jnz5v
-sEbxLwbMh5naJAX7j/SzwFdIuzsnXsgNPe13TRBoVgBh7Tz4u3Q3FevqVIzWYCoN
-/HfV1/dfpZHwbiyFcw1QspLLVgljR69LLrfPwLsTCaOo3b3Nv3yB++SjiV5U7pvo
-BQf2o1tYx0QOEQyaOLl4
-=pExV
+iEYEARECAAYFAk+ZPyEACgkQvFcC4BYPU0osSwCgzEsH2LgOVOIc7Fj53SEuSqxW
+wAcAn3yQ9/Ytv8N7MLlqpGR6ikeo8p1G
+=4mgV
 -----END PGP SIGNATURE-----
