@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/cronbase
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronbase/ChangeLog,v 1.38 2011/11/20 09:41:05 xarthisius Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-process/cronbase/ChangeLog,v 1.39 2012/04/26 12:27:08 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> cronbase-0.3.3.ebuild:
+  keyword ~amd64-fbsd
 
   20 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> cronbase-0.3.3.ebuild:
   ppc64 stable wrt #294346
